add entity test